# MedPredict

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  claude.md  deploy.sh  medpredict.db  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
data/raw/: cancer_kaggle.csv  diabetes.csv  heart_kaggle.csv  kidney_disease.csv  kidney_disease.csv.bak
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  PROJECT_DOCUMENTATION.md  REPORT.md  RUNBOOK.md  SECURITY.md
docs/model_cards/: diabetes_model_card.md  kidney_model_card.md
docs/{model_cards}/: cancer_model_card.md  heart_model_card.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx  RiskBadge.tsx  RiskGauge.tsx  ShapChart.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  Patients.tsx  Predict.tsx
frontend/src/services/: api.ts
mlruns/0/: meta.yaml
mlruns/623236923670761667/: meta.yaml
mlruns/623236923670761667/1595aabe81ce4e0380bbcff1f29f0ea8/: meta.yaml
mlruns/623236923670761667/1595aabe81ce4e0380bbcff1f29f0ea8/metrics/: auc_roc  brier_score  cv_auc_pr_mean  cv_auc_pr_std  ece  f1  fp  mcc  n_samples  npv  prevalence  sensitivity  tn  tp
mlruns/623236923670761667/1595aabe81ce4e0380bbcff1f29f0ea8/params/: colsample_bytree  learning_rate
mlruns/623236923670761667/1595aabe81ce4e0380bbcff1f29f0ea8/tags/: mlflow.runName
mlruns/623236923670761667/7973890cb11f4118836059a3e8840f0f/: meta.yaml
mlruns/623236923670761667/7973890cb11f4118836059a3e8840f0f/metrics/: auc_pr  auc_roc  brier_score  cv_auc_pr_mean  cv_auc_pr_std  ece  f1  fp  mcc  n_samples  npv  ppv  prevalence  sensitivity  tn  tp
mlruns/623236923670761667/7973890cb11f4118836059a3e8840f0f/params/: colsample_bytree  gamma  reg_lambda
mlruns/623236923670761667/7973890cb11f4118836059a3e8840f0f/tags/: mlflow.runName
mlruns/623236923670761667/9fd83e049abd481dbf0e355143fe3767/: meta.yaml
mlruns/623236923670761667/9fd83e049abd481dbf0e355143fe3767/metrics/: auc_pr  auc_roc  brier_score  cv_auc_pr_mean  cv_auc_pr_std  ece  f1  fn  fp  mcc  n_samples  npv  ppv  prevalence  sensitivity  specificity  tn  tp
mlruns/623236923670761667/9fd83e049abd481dbf0e355143fe3767/params/: gamma  learning_rate  reg_alpha
mlruns/623236923670761667/a15245bf1dfb40a79a9fc2f619db6fcd/: meta.yaml
mlruns/702882378493180396/: meta.yaml
mlruns/702882378493180396/e5314daf063a46869892d59503e56020/: meta.yaml
mlruns/702882378493180396/f0b27cd016f648ef83f7fc7931abe442/: meta.yaml
mlruns/781717425229301094/: meta.yaml
mlruns/781717425229301094/596aa49214214e14bf5c08e5cc378501/: meta.yaml
mlruns/781717425229301094/a1a17e001c6b48d09fb429d58d51daa1/: meta.yaml
mlruns/803319786783120824/: meta.yaml
mlruns/803319786783120824/0aa62aaf82664b7e89d04e2c3b7da3ae/: meta.yaml
mlruns/803319786783120824/942383491f704ea88edb2b1eb40eddbb/: meta.yaml
mlruns/803319786783120824/b70d52a966794466a4423b033c590dc1/: meta.yaml
mlruns/models/disease-prediction-cancer/: meta.yaml
mlruns/models/disease-prediction-diabetes/: meta.yaml
mlruns/models/disease-prediction-heart/: meta.yaml
mlruns/models/disease-prediction-kidney/: meta.yaml
scripts/: augment_data.py  download_datasets.sh  run_training.py
src/: config.py
src/api/: deps.py  main.py
src/api/routers/: analytics.py  auth.py  patients.py  predict.py  reports.py
src/auth/: security.py
src/data/: load.py
src/db/: models.py  session.py
src/explainability/: shap_explainer.py
src/features/: engineering.py  pipeline.py
src/mining/: association_rules.py  clustering.py
src/models/: evaluate.py  train.py
src/scoring/: risk_scorer.py
tests/: conftest.py
tests/unit/: test_preprocessing.py  test_risk_scorer.py  test_security.py
(+408 files in other folders)
