[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disease-prediction"
version = "0.1.0"
description = "Disease Prediction and Health Risk Analysis Using Data Mining Techniques"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Data Science Core ─────────────────────────────────────────────────────
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.11.0",

    # ── ML Models ─────────────────────────────────────────────────────────────
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",

    # ── Hyperparameter Tuning ─────────────────────────────────────────────────
    "optuna>=3.4.0",

    # ── Explainability ────────────────────────────────────────────────────────
    "shap>=0.44.0",
    "lime>=0.2.0.1",

    # ── Data Mining ───────────────────────────────────────────────────────────
    "mlxtend>=0.23.0",

    # ── Dimensionality Reduction (for clustering viz) ─────────────────────────
    "umap-learn>=0.5.0",

    # ── Experiment Tracking ───────────────────────────────────────────────────
    "mlflow>=2.10.0",

    # ── Data Validation ───────────────────────────────────────────────────────
    "great-expectations>=0.18.0",

    # ── Fairness ──────────────────────────────────────────────────────────────
    "fairlearn>=0.10.0",

    # ── Backend API ───────────────────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # ── Caching & Async Tasks ─────────────────────────────────────────────────
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",

    # ── Authentication ────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",

    # ── Rate Limiting ─────────────────────────────────────────────────────────
    "slowapi>=0.1.9",

    # ── Report Generation ─────────────────────────────────────────────────────
    "reportlab>=4.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # ── Logging ───────────────────────────────────────────────────────────────
    "structlog>=24.1.0",

    # ── HTTP Client ───────────────────────────────────────────────────────────
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    # ── Testing ───────────────────────────────────────────────────────────────
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # For FastAPI TestClient

    # ── Linting & Formatting ──────────────────────────────────────────────────
    "ruff>=0.2.0",
    "black>=24.2.0",
    "mypy>=1.8.0",

    # ── Type Stubs ────────────────────────────────────────────────────────────
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",

    # ── Notebooks ─────────────────────────────────────────────────────────────
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "plotly>=5.19.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102", "S101"]  # Allow assert in tests

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN", "S"]
"notebooks/**" = ["ANN", "E402", "F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["src"]
omit = ["src/db/migrations/*", "**/__init__.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
